implementing correct source file for png upload Update portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -1836,7 +1836,7 @@ yes'><!--[if gte vml 1]><v:shape id="Picture_x0020_4" o:spid="_x0000_i1026"
  mso-wrap-style:square'>
  <v:imagedata src="portfolio.fld/image001.png" o:title=""/>
 </v:shape><![endif]--><![if !vml]><img width=251 height=143
-src="portfolio.fld/PCBLayout2024.png" v:shapes="Picture_x0020_4"><![endif]><!--[if gte vml 1]><v:shape
+src="PCBLayout2024.png" v:shapes="Picture_x0020_4"><![endif]><!--[if gte vml 1]><v:shape
  id="Picture_x0020_3" o:spid="_x0000_i1025" type="#_x0000_t75" alt="A circuit board with many wires&#10;&#10;AI-generated content may be incorrect."
  style='width:217pt;height:171pt;visibility:visible;mso-wrap-style:square'>
  <v:imagedata src="portfolio.fld/image002.png" o:title="A circuit board with many wires&#10;&#10;AI-generated content may be incorrect"/>
@@ -1924,4 +1924,5 @@ v:shapes="Text_x0020_Box_x0020_1"><![endif]></p>
 </body>
 
 </html>
+
 
