--- a/portfolio.html
+++ b/portfolio.html
@@ -1841,7 +1841,7 @@ src="PCBLayout2024.png" v:shapes="Picture_x0020_4"><![endif]><!--[if gte vml 1]>
  style='width:217pt;height:171pt;visibility:visible;mso-wrap-style:square'>
  <v:imagedata src="portfolio.fld/image002.png" o:title="A circuit board with many wires&#10;&#10;AI-generated content may be incorrect"/>
 </v:shape><![endif]--><![if !vml]><img width=217 height=171
-src="portfolio.fld/image002.png"
+src="BOSchematic2024.png"
 alt="A circuit board with many wires&#10;&#10;AI-generated content may be incorrect."
 v:shapes="Picture_x0020_3"><![endif]></span></p>
 
@@ -1924,5 +1924,6 @@ v:shapes="Text_x0020_Box_x0020_1"><![endif]></p>
 </body>
 
 </html>
+
 
 
