--- a/portfolio.html
+++ b/portfolio.html
@@ -1915,7 +1915,7 @@ BQYAAAAABAAEAPMAAACABQAAAAA=
   <![endif]></v:textbox>
  <w:wrap type="square"/>
 </v:shape><![endif]--><![if !vml]><img width=472 height=50
-src="portfolio.fld/image005.png" align=right hspace=12
+src="SystemDemo20242.mov" align=right hspace=12
 alt="Text Box: Figure 3 : Verifying system’s sensor output with UNO R3 compatible break out PCB driving electrochemical sensor resting in a glucose solution in accordance to microcontroller’s compiled pwm algorithm. Sensor’s output is processed and plotted on the screen. "
 v:shapes="Text_x0020_Box_x0020_1"><![endif]></p>
 
@@ -1924,6 +1924,7 @@ v:shapes="Text_x0020_Box_x0020_1"><![endif]></p>
 </body>
 
 </html>
+
 
 
 
