--- a/portfolio.html
+++ b/portfolio.html
@@ -1914,11 +1914,11 @@ BQYAAAAABAAEAPMAAACABQAAAAA=
   </table>
   <![endif]></v:textbox>
  <w:wrap type="square"/>
-</v:shape><![endif]--><![if !vml]><img width=472 height=50
+</v:shape><![endif]<![if !vml]><img width=472 height=50
 src="SystemDemo20242.mov" align=right hspace=12
 alt="Text Box: Figure 3 : Verifying system’s sensor output with UNO R3 compatible break out PCB driving electrochemical sensor resting in a glucose solution in accordance to microcontroller’s compiled pwm algorithm. Sensor’s output is processed and plotted on the screen. "
-v:shapes="Text_x0020_Box_x0020_1"><![endif]></p>
-
+v:shapes="Text_x0020_Box_x0020_1"><![endif]></p>-->
+<video src="SystemDemo20242.mov" width="320" height="200" controls preload></video>
 </div>
 
 </body>
