--- a/portfolio.html
+++ b/portfolio.html
@@ -1921,15 +1921,16 @@ v:shapes="Text_x0020_Box_x0020_1"><![endif]></p>-->
 <video src="SystemDemo20242.mov" width="320" height="200" controls preload></video>
 <p class=MsoCaption>Figure <span class=GramE>3 :</span> Verifying system’s
     sensor output with UNO R3 compatible break out PCB driving electrochemical
-    sensor resting in a glucose solution in accordance <span class=GramE>to</span>
+    sensor resting in PBS solution in accordance <span class=GramE>to</span>
     microcontroller’s compiled <span class=SpellE>pwm</span> algorithm.
-    Sensor’s output is processed and plotted on the screen. <span
+    Sensor’s output is processed and plotted on the screen. Sensor response can be witness after the addition of glucose shown here. <span
     style='mso-no-proof:yes'><o:p></o:p></span></p>
 </div>
 
 </body>
 
 </html>
+
 
 
 
