--- a/portfolio.html
+++ b/portfolio.html
@@ -1822,11 +1822,11 @@ able to extend battery life by around 60%.</p>
  mso-position-vertical-relative:text'>
  <v:imagedata src="portfolio.fld/image004.png" o:title=""/>
  <w:wrap type="square"/>
-</v:shape><![endif]--><![if !vml]><img width=468 height=273
+</v:shape><![endif]<![if !vml]><img width=468 height=273
 src="portfolio.fld/image004.png" align=right hspace=12 v:shapes="Picture_x0020_2"><![endif]><b
 style='mso-bidi-font-weight:normal'><span style='font-family:"Arial",sans-serif;
 mso-fareast-font-family:Arial'>Power Optimization of a Continuous Glucose
-Monitoring (CGM) System<o:p></o:p></span></b></p>
+Monitoring (CGM) System<o:p></o:p></span></b></p>-->
 
 <p class=MsoNormal><u>Deliverables: <o:p></o:p></u></p>
 
@@ -1930,6 +1930,7 @@ v:shapes="Text_x0020_Box_x0020_1"><![endif]></p>-->
 </body>
 
 </html>
+
 
 
 
